# Registro-back

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  alembic.ini  pyproject.toml  requirements.txt  vercel.json
alembic/: env.py
alembic/versions/: 001_initial_onboarding_schema.py
api/: index.py
app/: main.py
app/api/: deps.py
app/api/v1/: router.py
app/api/v1/endpoints/: auth.py  onboarding.py  uploads.py
app/core/: config.py  exceptions.py  security.py
app/database/: session.py
app/middleware/: logging.py  rate_limit.py  security_headers.py
app/models/: __init__.py  tabi.py
app/repositories/: __init__.py  base.py  tabi_repository.py
app/schemas/: auth.py  common.py  onboarding.py  restaurant.py
app/services/: auth_service.py  onboarding_service.py  upload_service.py
app/utils/: names.py  sanitizers.py  storage.py  validators.py
docker/: Dockerfile  docker-compose.yml
docs/: API_FRONTEND.md
requirements/: base.txt  dev.txt
scripts/: supabase_onboarding_schema.sql  validate_onboarding.sql
tests/: conftest.py
tests/integration/: test_auth.py  test_onboarding.py
tests/unit/: test_security.py  test_validators.py
